--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,6 @@
-
+body{
+    background-color: green;
+}
 /* 
 
     You can write your own styles here...
@@ -10,3 +12,38 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.caja{
+    height: 300px;
+    width: 150px;
+    background-color: rgb(53, 49, 49);
+    box-shadow: 0px 0px 5px black, inset 0px 0px 10px black;
+   
+}
+button{
+    height: 75px;
+    width: 75px;
+    margin-top: 15px;
+   border: none;
+   box-shadow: inset 0px 0px 10px, 5px 5px; 
+}
+button.botonverde{
+    box-shadow: 0px 0px 15px 10px green, inset 3px 3px 10px black;
+    background-color: green;
+}
+button.botonamarillo{
+    box-shadow: 0px 0px 15px 10px yellow, inset 3px 3px 10px black;
+    background-color: yellow;
+}
+button.botonrojo{
+    box-shadow: 0px 0px 15px 10px red, inset 3px 3px 10px black;
+    background-color: red;
+    
+    
+}
+
+.soporte{
+    height: 40px;
+    width: 15px;
+    background-color: rgb(53, 49, 49);
+    box-shadow: 0px 0px 5px black, inset 0px 0px 10px black;
+}
