--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,47 +1,43 @@
-body{
-    background-color: green;
+body {
+    background-image: url(https://www.metropoliabierta.com/uploads/s1/85/44/47/paralel.jpeg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
-/* 
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
-.caja{
+.caja {
     height: 300px;
-    width: 150px;
+    width: 130px;
     background-color: rgb(53, 49, 49);
     box-shadow: 0px 0px 5px black, inset 0px 0px 10px black;
-   
+
 }
-button{
+
+button {
     height: 75px;
     width: 75px;
     margin-top: 15px;
-   border: none;
-   box-shadow: inset 0px 0px 10px, 5px 5px; 
+    border: none;
+    box-shadow: inset 0px 0px 10px, 5px 5px;
 }
-button.botonverde{
+
+button.botonverde {
     box-shadow: 0px 0px 15px 10px green, inset 3px 3px 10px black;
     background-color: green;
 }
-button.botonamarillo{
+
+button.botonamarillo {
     box-shadow: 0px 0px 15px 10px yellow, inset 3px 3px 10px black;
     background-color: yellow;
 }
-button.botonrojo{
+
+button.botonrojo {
     box-shadow: 0px 0px 15px 10px red, inset 3px 3px 10px black;
     background-color: red;
-    
-    
 }
 
-.soporte{
+.soporte {
     height: 40px;
     width: 15px;
     background-color: rgb(53, 49, 49);
