--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://www.metropoliabierta.com/uploads/s1/85/44/47/paralel.jpeg);
+    background-image: url(https://www.oirealtor.com/noticias-inmobiliarias/wp-content/uploads/2020/09/spain-1360980_960_720-1.jpg);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
